--- a/sonar-projects.properties
+++ b/sonar-projects.properties
@@ -1,11 +1,12 @@
-sonar.projectKey=apols:webproject
-sonar.projectName=webproject
-sonar.projectVersion=1.0.0
-sonar.projectDescription=Static analysis for the AppName
-sonar.sources=www
-sonar.exclusions=**/node_modules/**,**/*.spec.ts,**/dist/**,**/docs/**,**/*.js,**/coverage/**
-sonar.tests=www 
+sonar.host.url=http://jenkins-master.southcentralus.cloudapp.azure.com:9000
+sonar.login=admin
+sonar.password=admin
+sonar.projectKey=demo-app
+sonar.projectName=demo-app
+sonar.projectVersion=1.0
+sonar.sourceEncoding=UTF-8
+sonar.sources=src
+sonar.exclusions=**/node_modules/**
+sonar.tests=src
 sonar.test.inclusions=**/*.spec.ts
-sonar.ts.tslint.configPath=tslint.json
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.ts.coverage.lcovReportPath=coverage/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
