--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "puppeteer": "^13.4.0",
     "angular-gauge": "^4.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
